@@ -2,6 +2,7 @@ This file documents the revision history for the Mod-Gearman-Worker-Go
 
 next:
           - improve reloading configuration
+          - improve timeout handling
           - fix timeout on shutdown
 
 1.0.5    Tue Dec  4 17:13:48 CET 2018
